Stoped needless scrollbar caused by bottom padding.

--- a/src/css/settings.css
+++ b/src/css/settings.css
@@ -3,7 +3,9 @@
     height: 100%;
     width: 400px;
     background: #222222;
-    padding: 20px;
+    padding-top: 20px;
+    padding-left: 20px;
+    padding-right: 20px;
 }
 
 #privacy-choices #privacy-choices-settings p {
